--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,35 +1,30 @@
-name: Build on Tag
-
-on:
-  push:
-    tags: '*'
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout kernel source
-      uses: actions/checkout@v2
-
-    - name: Checkout zipper
-      uses: actions/checkout@v2
-      with:
-        repository: lemniskett/AnyKernel3
-        path: zipper
-
-    - name: Android kernel build
-      uses: lemniskett/android-kernel-actions@master
-      id: build
-      env:
-        NAME: Dark-Ages-Último
-      with:
-        arch: arm64
-        compiler: gcc/10
-        defconfig: vince_defconfig
-        image: Image.gz-dtb
-
-    - name: Release build
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: ${{ steps.build.outputs.outfile }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+name: Android Kernel Action
+description: Build android kernel with GitHub Action
+author: Syahrial Agni Prasetya <lemniskett@protonmail.com>
+branding:
+  icon: box
+  color: green
+inputs:
+  arch:
+    description: Device architecture
+    required: true
+  compiler:
+    description: Compiler to use
+    required: true
+  defconfig:
+    description: Defconfig to use
+    required: true
+  image:
+    description: Kernel image name
+    required: true
+outputs:
+  outfile:
+    description: Zip file generated from build
+runs:
+  using: docker
+  image: Dockerfile
+  args:
+    - ${{ inputs.arch }}
+    - ${{ inputs.compiler }}
+    - ${{ inputs.defconfig }}
+    - ${{ inputs.image }}
